syntax = "proto3";

package registerUser;

//option go_package = "registerpb";
option go_package = ".;registerUserpb";
// User schema to create
message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string username = 4;
    string password = 5;
    string level_of_education = 6; 
    string gender = 7; 
    int32 year_of_birth = 8; 
    string mailing_address = 9;
    string goals = 10;
    string country = 11;
    bool honor_code = 12;
}

// Create a new user
message CreateUserRequest {
    User user = 1;
}


// returns a user with new ID field
message CreateUserResponse {
    User user = 1; // will have a blog id
}

// message ReadUserRequest {
//     string user_id = 1;
// }

// message ReadUserResponse {
//     User user = 1;
// }

// message UpdateUserRequest {
//     User user = 1;
// }

// message UpdateUserResponse {
//     User user = 1;
// }

// message DeleteUserRequest {
//     string user_id = 1;
// }

// message DeleteUserResponse {
//     string user_id = 1;
// }

// message ListUserRequest {

// }

// message ListUserResponse {
//     User user = 1;
// }

service RegisterUserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    // rpc ReadUser (ReadUserRequest) returns (ReadUserResponse); // return NOT_FOUND if not found
    // rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse); // return NOT_FOUND if not found
    // rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse); // return NOT_FOUND if not found
    // rpc ListUser (ListUserRequest) returns (stream ListUserResponse);
}